--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -15,3 +15,10 @@ body{
 #title{
     font-size: 5vw;
 }
+.btn-primary{
+    font-size: 2vw;
+    padding: .375rem 1vw;
+}
+.card-title{
+    font-size:4vw;
+}
