--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -9,13 +9,16 @@
     font-family: "STARWARS" !important;
 }
 body{
-    /* background-image: url(../images/battlefront-background.jpg); */
+    background-image: url(../images/battlefront-background.jpg);
 }
 
 
 .btn-primary, .btn-danger{
     font-size: 2vw;
     padding: .375rem 1vw;
+}
+.card{
+    margin-bottom: 20px;
 }
 .card-title{
     font-size:4vw;
